# occam

./: .gitignore  CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/auxlib/: BException.h  CMakeLists.txt  Map.h  Types.h
src/: CMakeLists.txt
src/assembler/: CMakeLists.txt  asm.cpp  main.cpp
src/assembler/include/: asm.h
src/compiler/include/: ast.h  lex.h
src/virtual_machine/: CMakeLists.txt  Transputer.cpp  main.cpp
src/virtual_machine/include/: Memory.h  Transputer.h
test/: CMakeLists.txt  assembler_test.cpp
test/test_data/: program_1.txt
